# boss-footswitch-codex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
data/: app.js  index.html  style.css
docs/: hardware.md  protocol-capture.md
docs/plans/: 2026-03-28-katana-foot-design.md  2026-03-29-claude-port-refactor-plan.md
main/: CMakeLists.txt  amp_transport.c  amp_transport.h  app_config.h  app_main.c  app_state.c  app_state.h  buttons.c  buttons.h  diag_log.c  diag_log.h  leds.c  leds.h  midi_config.c  midi_config.h  web_server.c  web_server.h  web_ui.c  web_ui.h  wifi_manager.c  wifi_manager.h
